--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
-    <link rel="icon" href="../src/favicon.svg" sizes="any" type="image/svg+xml">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">  
 
     <title>Al Toque</title>
 
